log
Wed 20 Mar 2024 09:46:05 PM UTC: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:48:24: error: implicit declaration of function ‘mallloc’; did you mean ‘malloc’? [-Werror=implicit-function-declaration]
   48 |      int* dato = (int*)mallloc(sizeof(int));
      |                        ^~~~~~~
      |                        malloc
exercises.c:48:18: error: cast to pointer from integer of different size [-Werror=int-to-pointer-cast]
   48 |      int* dato = (int*)mallloc(sizeof(int));
      |                  ^
exercises.c:50:6: error: implicit declaration of function ‘push_back’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
   50 |      push_back(L, dato);
      |      ^~~~~~~~~
      |      pushBack
cc1: all warnings being treated as errors
Compilation failed
990e09a
Wed 20 Mar 2024 09:46:20 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:50:6: error: implicit declaration of function ‘push_back’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
   50 |      push_back(L, dato);
      |      ^~~~~~~~~
      |      pushBack
cc1: all warnings being treated as errors
Compilation failed
257a897
Wed 20 Mar 2024 09:46:31 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
bf3c4a5
Wed 20 Mar 2024 09:48:41 PM UTC: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
150c833
Wed 20 Mar 2024 09:52:15 PM UTC: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
cd0c2c8
Wed 20 Mar 2024 10:00:42 PM UTC: 
 exercises.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:110:20: error: ‘P3’ undeclared (first use in this function); did you mean ‘P2’?
  110 |     elemento = top(P3);
      |                    ^~
      |                    P2
exercises.c:110:20: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
f848915
Wed 20 Mar 2024 10:00:54 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
d9b868c
Wed 20 Mar 2024 10:02:15 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|1
total_score: 50/70
5e4fd09
Wed 20 Mar 2024 11:05:48 PM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  4|1
total_score: 50/70
ade545f
Wed 20 Mar 2024 11:09:01 PM UTC: 
 exercises.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  4|1
total_score: 50/70
bf7ab14
Wed 20 Mar 2024 11:14:37 PM UTC: 
 exercises.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:129:4: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘return’
  129 |    return 0;
      |    ^~~~~~
Compilation failed
f96eaf7
Wed 20 Mar 2024 11:14:47 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
688e1c4
Wed 20 Mar 2024 11:26:47 PM UTC: 
 exercises.c | 31 ++++++++++++++++++++++++++++++-
 1 file changed, 30 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:132:19: error: comparison between pointer and integer [-Werror]
  132 |     if (cadena[i] == "(" || cadena[i] == "[" || cadena[i] == "{")
      |                   ^~
exercises.c:132:19: error: comparison with string literal results in unspecified behavior [-Werror=address]
exercises.c:132:39: error: comparison between pointer and integer [-Werror]
  132 |     if (cadena[i] == "(" || cadena[i] == "[" || cadena[i] == "{")
      |                                       ^~
exercises.c:132:39: error: comparison with string literal results in unspecified behavior [-Werror=address]
exercises.c:132:59: error: comparison between pointer and integer [-Werror]
  132 |     if (cadena[i] == "(" || cadena[i] == "[" || cadena[i] == "{")
      |                                                           ^~
exercises.c:132:59: error: comparison with string literal results in unspecified behavior [-Werror=address]
exercises.c:136:24: error: comparison between pointer and integer [-Werror]
  136 |     else if (cadena[i] == ")")
      |                        ^~
exercises.c:136:24: error: comparison with string literal results in unspecified behavior [-Werror=address]
exercises.c:138:21: error: comparison with string literal results in unspecified behavior [-Werror=address]
  138 |       if (top(pila) == "(")
      |                     ^~
exercises.c:143:24: error: comparison between pointer and integer [-Werror]
  143 |     else if (cadena[i] == "]")
      |                        ^~
exercises.c:143:24: error: comparison with string literal results in unspecified behavior [-Werror=address]
exercises.c:145:21: error: comparison with string literal results in unspecified behavior [-Werror=address]
  145 |       if (top(pila) == "[")
      |                     ^~
exercises.c:152:21: error: comparison with string literal results in unspecified behavior [-Werror=address]
  152 |       if (top(pila) == "{")
      |                     ^~
cc1: all warnings being treated as errors
Compilation failed
651dca1
Wed 20 Mar 2024 11:28:55 PM UTC: 
 exercises.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:138:21: error: comparison between pointer and integer [-Werror]
  138 |       if (top(pila) == '(')
      |                     ^~
exercises.c:145:21: error: comparison between pointer and integer [-Werror]
  145 |       if (top(pila) == '[')
      |                     ^~
exercises.c:152:21: error: comparison between pointer and integer [-Werror]
  152 |       if (top(pila) == '{')
      |                     ^~
cc1: all warnings being treated as errors
Compilation failed
efed83c
